Add benchmark support and optimizations in CMakeLists.txt

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,9 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+# Optimisations pour les benchmarks
+set(CMAKE_CXX_FLAGS_RELEASE "-O3 -march=native -DNDEBUG")
+
 # Bibliothèque header-only
 add_library(static_sort INTERFACE)
 target_include_directories(static_sort INTERFACE
@@ -13,57 +16,21 @@ target_include_directories(static_sort INTERFACE
     $<INSTALL_INTERFACE:include>
 )
 
-# Options de compilation pour les exemples
-if(CMAKE_CXX_COMPILER_ID MATCHES "GNU|Clang|AppleClang")
-    add_compile_options(-O3 -Wall -Wextra)
-elseif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
-    add_compile_options(/O2 /W4)
-endif()
+# Télécharger et compiler Google Benchmark avec FetchContent
+include(FetchContent)
+set(BENCHMARK_ENABLE_TESTING OFF CACHE BOOL "Enable testing of the benchmark library." FORCE)
+set(BENCHMARK_ENABLE_INSTALL OFF CACHE BOOL "Enable installation of benchmark." FORCE)
+set(BENCHMARK_ENABLE_GTEST_TESTS OFF CACHE BOOL "Enable Google Test unit tests." FORCE)
 
-# Exemple principal
-add_executable(example_main examples/main.cpp)
-target_link_libraries(example_main PRIVATE static_sort)
+FetchContent_Declare(
+    benchmark
+    GIT_REPOSITORY https://github.com/google/benchmark.git
+    GIT_TAG v1.8.3
+)
+FetchContent_MakeAvailable(benchmark)
 
-# Benchmarks (optionnels)
-option(BUILD_BENCHMARKS "Build benchmark executables" OFF)
-
-if(BUILD_BENCHMARKS)
-    add_executable(bench_6 examples/main.cpp)
-    target_compile_definitions(bench_6 PRIVATE BENCH_6)
-    target_link_libraries(bench_6 PRIVATE static_sort)
-
-    add_executable(bench_10 examples/main.cpp)
-    target_compile_definitions(bench_10 PRIVATE BENCH_10)
-    target_link_libraries(bench_10 PRIVATE static_sort)
-
-    add_executable(bench_n examples/main.cpp)
-    target_compile_definitions(bench_n PRIVATE BENCH_N)
-    target_link_libraries(bench_n PRIVATE static_sort)
-
-    add_executable(bench_pair_sort examples/main.cpp)
-    target_compile_definitions(bench_pair_sort PRIVATE BENCH_PAIR_SORT)
-    target_link_libraries(bench_pair_sort PRIVATE static_sort)
-endif()
-
-# Installation (optionnelle)
-option(INSTALL_STATIC_SORT "Install StaticSort library" OFF)
-
-if(INSTALL_STATIC_SORT)
-    include(GNUInstallDirs)
-
-    install(TARGETS static_sort
-            EXPORT StaticSortTargets
-            INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-    )
-
-    install(FILES include/static_sort.h
-            DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
-    )
-
-    install(EXPORT StaticSortTargets
-            FILE StaticSortTargets.cmake
-            NAMESPACE StaticSort::
-            DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/StaticSort
-    )
-endif()
+# Build benchmark executable
+add_executable(bench_static_sort benchmark/bench_static_sort.cpp)
+target_link_libraries(bench_static_sort PRIVATE static_sort benchmark::benchmark)
+target_compile_options(bench_static_sort PRIVATE -Wall -Wextra -Wpedantic)
 
